--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -34,7 +34,7 @@
     </div>
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
-            <nav id="nav-menu-container" class="col-md-10">
+            <nav id="nav-menu-container" class="col-md-9">
                 <ul class="nav-menu">
                     <li class="menu-active">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
@@ -65,29 +65,32 @@
 
             @if (User.IsInRole("Controller"))
             {
-                <nav id="" class="col-md-2">
+                <nav id="" class="col-md-3">
                     <!--Notification-->
                     <ul>
                         <li class="dropdown">
                             @if (@ViewBag.count > 0)
                             {
-                                <a title="Unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge"  data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
+                                <a title="Unread notifications!" class="btn-outline-info"  data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
                             }
                             else
                             {
-                                <a title="You have no unread notifications!" class="dropdown-toggle btn btn-outline-info btn-sm caret badge" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
+                                <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
                             }
 
                             <ul class="dropdown-menu">
                                 @if (ViewBag.Notification != null)
                                 {
                                     var data = ViewBag.Notification;
+                                    <li style="padding: 0 5px;"> New </li>
+                                    <hr />
                                     foreach (var dt in data)
                                     {
-                                        <li><a href="@Url.Action("Create", "AssignRequisitions", new {requisitionId = dt.RequisitionId})"> Mr. @dt.Employee.FullName &nbsp; @dt.ControllerText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.ControllerNotifyDateTime.ToString("hh:mm tt")</a></li>
+
+                                        <li style="padding: 0 5px;"><a href="@Url.Action("Create", "AssignRequisitions", new {requisitionId = dt.RequisitionId})" class="text-black"> Mr. @dt.Employee.FullName &nbsp; @dt.ControllerText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.ControllerNotifyDateTime.ToString("hh:mm tt")</a></li>
                                         <hr/>
                                     }
-                                    <li class="text-center">New Requiest</li>
+                                    <li class="text-center"><a href="@Url.Action("AllNotification","Notifications")" >See All</a></li>
                                 }
 
 
@@ -95,6 +98,41 @@
                         </li>
                     </ul>
 
+                </nav>
+            }
+            @if (User.IsInRole("User"))
+            {
+                <nav class="col-md-3">
+                    <ul>
+
+                        <li class="dropdown">
+                            @if (@ViewBag.count > 0)
+                            {
+                                <a title="Unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
+                            }
+                            else
+                            {
+                                <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
+                            }
+
+                            <ul class="dropdown-menu">
+                                <li style="padding: 0 5px;"> New</li>
+                                <hr />
+                                @if (ViewBag.Notification != null)
+                                {
+                                    var notify = ViewBag.Notification;
+                                    
+                                    foreach (var dt in notify)
+                                    {
+                                        <li style="padding: 0 5px;"><a href="@Url.Action("Details", "Requisitions", new {@id = dt.RequisitionId})" class="text-black">Mr. @dt.Employee.FullName &nbsp; @dt.SenderText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.SenderNotifyDateTime.ToString("hh:mm tt")</a></li>
+                                        <hr />
+                                    }
+                                    
+                                }
+                                <li class="text-center"><a href="@Url.Action("Index","Notifications")">See All</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </nav>
             }
         </div>
