--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("CompleteRequest", "AssignRequisitions")"><i class="fa fa-car"></i> Complete Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("CompleteRequest", "AssignRequisitions")"><i class="fa fa-car"></i> Completed Requisitions </a>
                                 </div>
 
                                 <br/><br/>
@@ -86,7 +86,7 @@
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")"><i class="fa fa-car"></i> All Requisition</a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")"><i class="fa fa-car"></i> Total Requisition</a>
                                 </div>
                                 
                                 
