--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -55,6 +55,8 @@
                                     </h3>
                                     <hr/>
                                 </div>
+                               
+
                                 <br/><br/>
                                 <div class="col-md-12">
                                     <a class="dropdown-item" href="@Url.Action("Index", "Schedule")"><i class="fa fa-calendar"></i> Schedule Calendar</a>
@@ -173,7 +175,9 @@
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | this product make by <i class="fa fa-heart-o" aria-hidden="true"></i> &nbsp; <a href="@Url.Action("AboutDeveloper","Home")" target="_blank"><strong>Developers</strong></a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
+
+                    &nbsp;&nbsp;@DateTime.Now.ToString()
+                </p> 
                 <div class="col-lg-4 col-sm-12 footer-social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
