--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -133,8 +133,8 @@
                 <th>Status</th>
                 <th>Submited Date Time</th>
                 <th>Requisition Type</th>
-                <th>Request For</th>
-                <th>Description</th>
+                <th>Request For : </th>
+                <th>Purpose Of Visit : </th>
                
         </tr>
         </tfoot>
@@ -311,10 +311,6 @@
         
         $(document).ready(function () {
             $('#example').DataTable({ responsive: true, "autoWidth": false });
-        
-        });
-
-        $(document).ready(function () {
             $('#example1').DataTable({ responsive: true, "autoWidth": false });
             
         });
