--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.ReportingServices.Interfaces
+﻿@using System.Globalization
+@using Microsoft.ReportingServices.Interfaces
 @model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
@@ -21,7 +22,6 @@
     }
 </div>
 
-<div style="margin-left: 15px;" class="responsive nowrap">
 
     <p>
         @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-success"})
@@ -30,7 +30,7 @@
     <table id="example1" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
 
         <thead>
-        
+
         <tr class="bg-info">
             <th>
                 SL
@@ -66,7 +66,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.Description)
             </th>
-            
+            <th>
+                @Html.DisplayName("Requested Time ")
+            </th>
         </tr>
 
         </thead>
@@ -78,6 +80,9 @@
                 foreach (var item in Model)
                 {
                     sl++;
+                    TimeSpan time = DateTime.Now - @item.Requisition.SubmitDateTime;
+                    string formattedTime = string.Format(CultureInfo.CurrentCulture, "{0} days, {1} hours, {2} minutes, {3} seconds", time.Days, time.Hours, time.Minutes, time.Seconds);
+
                     <tr>
                         <td>
                             @sl
@@ -86,12 +91,12 @@
                         <td>
                             @if (item.StatusType == "New")
                             {
-                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })<span> </span>
+                                @Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}, new {@class = "btn btn-warning btn-sm"})<span> </span>
                             }
 
-                            @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" }) <span> </span>
+                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new {@class = "btn btn-success btn-sm"}) <span> </span>
 
-                            @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }, new { @class = "btn btn-info btn-sm" })
+                            @Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id}, new {@class = "btn btn-info btn-sm"})
 
                         </td>
                         <td>
@@ -138,7 +143,11 @@
                         <td>
                             @item.Requisition.Description
                         </td>
-                        
+
+                        <td class="text-danger">
+                            @formattedTime
+                        </td>
+
                     </tr>
                 }
             }
@@ -180,9 +189,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Requisition.Description)
             </th>
-            
+            <th>
+                @Html.DisplayName("Requested Time ")
+            </th>
         </tr>
         </tfoot>
     </table>
-</div>
-    
+
