Resolve notification view

--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -204,8 +204,21 @@
     <script src="~/Scripts/chosenDD/chosen.jquery.min.js"></script>
     <script src="~/Content/js/main.js"></script>
     <script src="~/Scripts/RequiredFieldsAsteriskJs/RequiredFieldAsterisk.js"></script>
-
-    @RenderSection("scripts", required: false)
+    <script src="~/Scripts/NotificationJs/load-notification.js"></script>
     
+    @RenderSection("scripts", required: false)
+
+<script>
+
+    //Controller Notification Load......
+    var url = '@Url.Action("ControllerNotify", "Notifications")';
+    var notifications = $("#loadNotification");
+    setInterval(function () {
+        notifications.load(url);
+    }, 5000);
+
+    //Employee Notification Load......
+
+</script>
 </body>
 </html>
