--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -4,7 +4,7 @@
     <!-- Start header -->
     <div class="header-top" >
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
                     <p class="float-left">
                         <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/bcc_logo.png" width="40" height="40" alt="Home Logo" title="Home BCC"/></a>
@@ -21,8 +21,8 @@
                             </button>
                             <ul class="dropdown-menu">
 
-                                <li class="btn btn - sm btn - outline - info bg - transparent text - white fa fa - user">@Html.ActionLink("English", "ChangeLanguage", "Language", new { LanguageAbbrevation = "en" }, null)</li>
-                                <li class="btn btn - sm btn - outline - info bg - transparent text - white fa fa - user">@Html.ActionLink("বাংলা", "ChangeLanguage", "Language", new { LanguageAbbrevation = "bn" }, null)</li>
+                                <li class="btn btn-sm btn-outline- info bg-transparent text-white fa fa-user">@Html.ActionLink("English", "ChangeLanguage", "Language", new { LanguageAbbrevation = "en" }, null)</li>
+                                <li class="btn btn-sm btn-outline- info bg-transparent text-white fa fa-user">@Html.ActionLink("বাংলা", "ChangeLanguage", "Language", new { LanguageAbbrevation = "bn" }, null)</li>
                             </ul>
                         </div>
                     }
@@ -51,7 +51,7 @@
     </div>
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
-            <nav id="nav-menu-container" class="col-md-9">
+            <nav id="nav-menu-container" class="col-md-9 col-9 col-lg-9">
                 <ul class="nav-menu">
                     <li class="menu-active">@Html.ActionLink(@Resources.HomeText.Home, "Index", "Home")</li>
                     <li>@Html.ActionLink(@Resources.HomeText.About, "About", "Home")</li>
@@ -81,74 +81,18 @@
 
             @if (User.IsInRole("Controller"))
             {
-                <nav id="" class="col-md-3">
-                    <!--Notification-->
-                    <ul>
-                        <li class="dropdown">
-                            @if (@ViewBag.count > 0)
-                            {
-                                <a title="Unread notifications!" class="btn-outline-info"  data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
-                            }
-                            else
-                            {
-                                <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
-                            }
-
-                            <ul class="dropdown-menu">
-                                @if (ViewBag.Notification != null)
-                                {
-                                    var data = ViewBag.Notification;
-                                    <li style="padding: 0 5px;"> New </li>
-                                    <hr />
-                                    foreach (var dt in data)
-                                    {
-
-                                        <li style="padding: 0 5px;"><a href="@Url.Action("Create", "AssignRequisitions", new {requisitionId = dt.RequisitionId})" class="text-black"> Mr. @dt.Employee.FullName &nbsp; @dt.ControllerText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.ControllerNotifyDateTime.ToString("hh:mm tt")</a></li>
-                                        <hr/>
-                                    }
-                                    <li class="text-center"><a href="@Url.Action("AllNotification","Notifications")" >See All</a></li>
-                                }
-
-
-                            </ul>
-                        </li>
-                    </ul>
+                <nav id="loadNotification" class="col-md-3 col-3 col-lg-3">
+                    <!--Notification for Controller-->
+                    @Html.Partial("_ControllerNotification")
 
                 </nav>
             }
+
             @if (User.IsInRole("User"))
             {
-                <nav class="col-md-3">
-                    <ul>
-
-                        <li class="dropdown">
-                            @if (@ViewBag.count > 0)
-                            {
-                                <a title="Unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">@ViewBag.count</span></a>
-                            }
-                            else
-                            {
-                                <a title="You have no unread notifications!" class="btn-outline-info" data-toggle="dropdown"><i class="fa fa-bell"></i><span class="font-weight-bold" style="font-size: 16px;"></span></a>
-                            }
-
-                            <ul class="dropdown-menu">
-                                <li style="padding: 0 5px;"> New</li>
-                                <hr />
-                                @if (ViewBag.Notification != null)
-                                {
-                                    var notify = ViewBag.Notification;
-                                    
-                                    foreach (var dt in notify)
-                                    {
-                                        <li style="padding: 0 5px;"><a href="@Url.Action("Details", "Requisitions", new {@id = dt.RequisitionId})" class="text-black">Mr. @dt.Employee.FullName &nbsp; @dt.SenderText &nbsp; Req No: @dt.Requisition.RequisitionNumber &nbsp; @dt.SenderNotifyDateTime.ToString("hh:mm tt")</a></li>
-                                        <hr />
-                                    }
-                                    
-                                }
-                                <li class="text-center"><a href="@Url.Action("Index","Notifications")">See All</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                <nav id="loadEmpNtification" class="col-md-3 col-3 col-lg-3">
+                    <!--Notification for Employee-->
+                    @Html.Partial("_EmployeeNotification")
                 </nav>
             }
         </div>
