--- a/RMS.App/Views/Schedule/Index.cshtml
+++ b/RMS.App/Views/Schedule/Index.cshtml
@@ -22,60 +22,27 @@
             <div class="modal-body">
               
 
+                <p id="status" hidden="hidden"></p>
 
                 <p id="description"></p>
             </div>
 
             <div class="modal-footer">
-                <button id="btnCheckIn" class="btn btn-success pull-right">
-                    <span class="glyphicon glyphicon-ok"></span>Check In
-                </button>
+                <button id="btnCheckIn" class="btn btn-success pull-right">CheckIn</button>
+                <button id="btnCheckOut" class="btn btn-success pull-right">CheckOut</button>
+
+                <button id="btnAssign" class="btn btn-success pull-right">Assign Requisition</button>
+                <button id="btnCancel" class="btn btn-success pull-right">Cancel Requisition</button>
                 <a href="#" class="btn btn-warning" title="Close" data-dismiss="modal"> Close </a>
             </div>
         </div>
     </div>
 </div>
-<!------------Check In Modal-->
-@*<div id="checkInModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header bg-info">
+<!------------Assign Modal---------->
 
-                <h4 class="modal-title"> Requisition No : <span id="requisitionNumber"></span></h4>
-                <a href="#" class="close" title="Close" data-dismiss="modal"> &times; </a>
-            </div>
 
-            <div class="modal-body">
-                <form class="form-horizontal">
-                    <input type="hidden" id="statusId" value="0"/>
-                    <div class="form-group">
-                        <label>Requisition Number</label>
-                        <input type="text" id="txtRqNo" class="form-control" readonly="readonly">
-                    </div>
-                    <div class="form-group">
-                        <label>Requisition Id</label>
-                        <input type="text" id="txtRqId" class="form-control" readonly="readonly">
-                    </div>
-                    <div class="form-group">
-                        <label>Status Type</label>
-                        <input type="text" id="txtStatus" class="form-control" readonly="readonly">
-                    </div>
 
-                    <div class="form-group">
-                        <button type="button" class="btn btn-secondary" id="btnCheckedIn">
-                            <span class="glyphicon glyphicon-ok"></span>Check In
-                        </button>
-                    </div>
 
-                </form>
-            </div>
-
-            <div class="modal-footer">
-                <a href="#" class="btn btn-warning" title="Close" data-dismiss="modal"> Close </a>
-            </div>
-        </div>
-    </div>
-</div>*@
 <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" rel="stylesheet">
 <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print">
 @section scripts{
